Strikethrough and delete button working

--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ justify-content: end;
 .listContainer {
     display: flex;
     justify-content: center;
+    font-size: x-large;
     }
+
 
     
